# lichess_analysis

./: .gitignore  Dockerfile_Lichess_Analysis  Dockerfile_PGN_Parser  README.md  build_image.sh  data_downloader.py
archive/: build_image.sh  requirements.txt
archive/notebooks/: initial_analysis.ipynb  read_parquet_from_s3.ipynb
data/: lichess_luckleland_2022-04-04.pgn  lichess_luckleland_2022-04-07.pgn
data_downloader_image/: Dockerfile  build_image.sh  requirements.txt
image/: Dockerfile  build_image.sh  data_downloader.py  requirements.txt
notebooks/: chat_gpt_exploration.ipynb  initial_analysis.ipynb  pgn_reader.ipynb
queries/: LichessQueries-0.sql  LichessQueries-1.sql  LichessQueries-2.sql  create_view_statements.sql  luckleland_results.sql  table_lichess_api_data.sql  table_lichess_running_gamestrings.sql
scripts/: data_downloader.py  pgn_parser.py
source/: data_downloader.py  pgn_parser.py
source/utils/: query_utils.py  s3_utils.py
utils/: partition_handler.py  query_utils.py
v2/: .gitignore  README.md
v2/backend/: etl.py  eval_runner.py  evaluator.py  main.py  migrate.py  pyproject.toml  review_generator.py  review_runner.py  storage.py
v2/deploy/: com.joshcrasto.lichess_analysis.plist  command_aliases.sh  install.sh  lichess_analysis.service  supervisord.conf
v2/frontend/: index.html  package-lock.json  package.json  vite.config.js
v2/frontend/src/: App.css  App.jsx
v2/frontend/src/components/: BoardModal.css  BoardModal.jsx  Dashboard.css  Dashboard.jsx  EvalLogModal.css  EvalLogModal.jsx  GameDetail.css  GameDetail.jsx  (+13 more)
