[project]
name = "lichess-backend"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-chess>=1.999",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.2",
]